--- a/index.html
+++ b/index.html
@@ -6,74 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amita:wght@400;700&family=Cinzel+Decorative:wght@400;700;900&family=Cinzel:wght@400;500;600;700;800;900&family=Island+Moments&family=Outfit:wght@100;200;300;400;500;600&family=Vujahday+Script&display=swap"
+      rel="stylesheet"
+    />
     <title>Forside</title>
   </head>
   <body>
-    <header>
-      <div id="mySidepanel" class="sidepanel">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-          ><img src="" alt=""
-        /></a>
-        <a href="ommig.html">Om mig</a>
-        <a href="tema03.html">Tema 03</a>
-        <a href="tema04.html">Tema 04</a>
-        <a href="tema05.html">Tema 05</a>
+    <div id="screen">
+      <div id="forside">
+        <div id="splashbillede"></div>
+        <div id="elementer">
+          <div id="ommig_container" class="">
+            <div id="ommig_sprite" class=""></div>
+          </div>
+          <div id="tema02_container" class="">
+            <div id="tema02_sprite" class=""></div>
+          </div>
+          <div id="tema03_container" class="">
+            <div id="tema03_sprite" class=""></div>
+          </div>
+          <div id="tema04_container" class="">
+            <div id="tema04_sprite" class=""></div>
+          </div>
+          <div id="tema05_container" class="">
+            <div id="tema05_sprite" class=""></div>
+          </div>
+          <div id="stjerne_container">
+            <div id="stjerne_sprite"></div>
+          </div>
+          <div id="sol_container" class="">
+            <div id="sol_sprite" class=""></div>
+          </div>
+        </div>
       </div>
-      <button class="openbtn" onclick="openNav()">
-        <img src="" alt="menu_knap" />
-      </button>
-      <div class="logo">
-        <a href="index.html"
-          ><img src="UI_elementer/Yellow_logo_color_pos_RGB.png" alt=""
-        /></a>
-      </div>
-      <nav id="nav_desktop">
-        <ul>
-          <li><a href="ommig.html">Om mig</a></li>
-          <li><a href="tema03.html">Tema 03</a></li>
-          <li><a href="tema04.html">Tema 04</a></li>
-          <li><a href="tema05.html">Tema 05</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section id="splashbillede_section">
-      <div id="læsommig_button1">
-        <button
-          id="læsommig_button1"
-          onclick="window.location.href='ommig.html'"
-        >
-          Læs mere om mig
-        </button>
-      </div>
-    </section>
-    <footer>
-      <div id="personligeinformationer">
-        <h3>PERSONLIGE INFORMATIONER</h3>
-        <ul>
-          <li>Telefonnummer <span class="tlf">+45 50 53 07 22‬</span></li>
-          <li>Email <span class="email">anit8842@stud.kea.dk</span></li>
-          <li>
-            Instagram
-            <a href="https://www.instagram.com/anitaniknam/"
-              ><img src="" alt="instagram"
-            /></a>
-          </li>
-        </ul>
-      </div>
-      <div id="ommig" onclick="window.location.href='ommig.html'">
-        <h3>OM MIG</h3>
-      </div>
-      <div id="tema03" onclick="window.location.href='tema03.html'">
-        <h3>TEMA 03</h3>
-      </div>
-      <div id="tema04" onclick="window.location.href='tema04.html'">
-        <h3>TEMA 04</h3>
-      </div>
-      <div id="tema05" onclick="window.location.href='tema05.html'">
-        <h3>TEMA 05</h3>
-      </div>
-      <div id="some"></div>
-    </footer>
+      <div id="sound_til"></div>
+      <div id="sound_fra"></div>
+    </div>
+    <div id="sounds">
+      <audio
+        src="sounds/(FREE) RnB Type Beat x Emotional instrumental 2021 'Stay pt.2'_01.mp3"
+        id="baggrundsmusik"
+      ></audio>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
