--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,13 +37,34 @@
           <div id="stjerne_container">
             <div id="stjerne_sprite"></div>
           </div>
+          <div id="stjerne_container1">
+            <div id="stjerne_sprite1"></div>
+          </div>
+          <div id="stjerne_container2">
+            <div id="stjerne_sprite2"></div>
+          </div>
+          <div id="stjerne_container3">
+            <div id="stjerne_sprite3"></div>
+          </div>
+          <div id="stjerne_container4">
+            <div id="stjerne_sprite4"></div>
+          </div>
+          <div id="stjerne_container5">
+            <div id="stjerne_sprite5"></div>
+          </div>
+          <div id="stjerne_container6">
+            <div id="stjerne_sprite6"></div>
+          </div>
           <div id="sol_container" class="">
             <div id="sol_sprite" class=""></div>
+            <!-- <div id="kat_container" class="">
+            <div id="kat_sprite" class=""></div> -->
           </div>
         </div>
       </div>
       <div id="sound_til"></div>
       <div id="sound_fra"></div>
+      <div id="overskrift"></div>
     </div>
     <div id="sounds">
       <audio
