--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
           </div>
           <div id="sol_container" class="">
             <div id="sol_sprite" class=""></div>
-            <!-- <div id="kat_container" class="">
-            <div id="kat_sprite" class=""></div> -->
+          </div>
+          <div id="kat_container" class="">
+            <div id="kat_sprite" class=""></div>
           </div>
         </div>
       </div>
