--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     </div>
     <div id="sounds">
       <audio
-        src="sounds/(FREE) RnB Type Beat x Emotional instrumental 2021 'Stay pt.2'_01.mp3"
+        loop
+        src="sounds/looperman-l-2503828-0236527-i-want-it-90s-rnb-sample-vibe-x-chix-tape-vi_01.mp3"
         id="baggrundsmusik"
       ></audio>
     </div>
