--- a/index.html
+++ b/index.html
@@ -19,20 +19,44 @@
       <div id="forside">
         <div id="splashbillede"></div>
         <div id="elementer">
-          <div id="ommig_container" class="">
-            <div id="ommig_sprite" class=""></div>
-          </div>
-          <div id="tema02_container" class="">
-            <div id="tema02_sprite" class=""></div>
-          </div>
-          <div id="tema03_container" class="">
-            <div id="tema03_sprite" class=""></div>
-          </div>
-          <div id="tema04_container" class="">
-            <div id="tema04_sprite" class=""></div>
-          </div>
-          <div id="tema05_container" class="">
-            <div id="tema05_sprite" class=""></div>
+          <div id="knapper">
+            <button id="ommig_knap" onclick="window.location.href='ommig.html'">
+              <div id="ommig_container" class="">
+                <div id="ommig_sprite" class=""></div>
+              </div>
+            </button>
+            <button
+              id="tema02_knap"
+              onclick="window.location.href='tema02.html'"
+            >
+              <div id="tema02_container" class="">
+                <div id="tema02_sprite" class=""></div>
+              </div>
+            </button>
+            <button
+              id="tema03_knap"
+              onclick="window.location.href='tema03.html'"
+            >
+              <div id="tema03_container" class="">
+                <div id="tema03_sprite" class=""></div>
+              </div>
+            </button>
+            <button
+              id="tema04_knap"
+              onclick="window.location.href='tema04.html'"
+            >
+              <div id="tema04_container" class="">
+                <div id="tema04_sprite" class=""></div>
+              </div>
+            </button>
+            <button
+              id="tema05_knap"
+              onclick="window.location.href='tema05.html'"
+            >
+              <div id="tema05_container" class="">
+                <div id="tema05_sprite" class=""></div>
+              </div>
+            </button>
           </div>
           <div id="stjerne_container">
             <div id="stjerne_sprite"></div>
