--- a/ommig.html
+++ b/ommig.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="ommig.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +22,7 @@
           ><img src="" alt=""
         /></a>
         <a href="ommig.html">Om mig</a>
-        <!-- <a href="tema02.html">Tema 02</a> -->
+        <a href="tema02.html">Tema 02</a>
         <a href="tema03.html">Tema 03</a>
         <a href="tema04.html">Tema 04</a>
         <a href="tema05.html">Tema 05</a>
@@ -37,7 +38,7 @@
       <nav id="nav_desktop">
         <ul>
           <li><a href="ommig.html">Om mig</a></li>
-          <!-- <li><a href="tema02.html">Tema 02</a></li> -->
+          <li><a href="tema02.html">Tema 02</a></li>
           <li><a href="tema03.html">Tema 03</a></li>
           <li><a href="tema04.html">Tema 04</a></li>
           <li><a href="tema05.html">Tema 05</a></li>
