--- a/ommig.html
+++ b/ommig.html
@@ -32,9 +32,11 @@
       </button>
       <div class="logo">
         <a href="index.html"
-          ><img src="UI_elementer/Yellow_logo_color_pos_RGB.png" alt=""
+          ><img src="SVG/overskrift.svg" alt="overskrift"
         /></a>
       </div>
+      <div class="kat_overskrift"></div>
+      <div class="kat_løber_overskrift"></div>
       <nav id="nav_desktop">
         <ul>
           <li><a href="ommig.html">Om mig</a></li>
@@ -45,7 +47,7 @@
         </ul>
       </nav>
     </header>
-    <section id="splashbillede_section">
+    <!-- <section id="splashbillede_section">
       <div id="læsommig_button1">
         <button
           id="læsommig_button1"
@@ -54,17 +56,27 @@
           Læs mere om mig
         </button>
       </div>
-    </section>
+    </section> -->
     <footer>
       <div id="personligeinformationer">
         <h3>PERSONLIGE INFORMATIONER</h3>
         <ul>
-          <li>Telefonnummer <span class="tlf">+45 50 53 07 22‬</span></li>
-          <li>Email <span class="email">anit8842@stud.kea.dk</span></li>
           <li>
-            Instagram
+            Telefonnummer:
+            <span class="tlf"><a href="tel:+4550530722">50530722</a> </span>
+          </li>
+          <li>
+            Email:
+            <span class="email"
+              ><a href="mailto:anita.niknam@gmail.com"
+                >anita.niknam@gmail.com</a
+              ></span
+            >
+          </li>
+          <li>
+            Instagram:
             <a href="https://www.instagram.com/anitaniknam/"
-              ><img src="" alt="instagram"
+              ><img src="" alt="Instagram"
             /></a>
           </li>
         </ul>
