--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
           <div id="kat_container" class="">
             <div id="kat_sprite" class=""></div>
           </div>
+          <div id="anita_container" class="">
+            <div id="anita_sprite" class=""></div>
+          </div>
         </div>
       </div>
       <div id="sound_til"></div>
