--- a/ommig.html
+++ b/ommig.html
@@ -19,46 +19,48 @@
   </head>
   <body>
     <header>
-      <div id="mySidepanel" class="sidepanel">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
-          <img src="ikoner/menuluk.svg" alt="" />
-        </a>
-        <a href="ommig.html">Om mig</a>
-        <a href="tema02.html">Tema 02</a>
-        <a href="tema03.html">Tema 03</a>
-        <a href="tema04.html">Tema 04</a>
-        <a href="tema05.html">Tema 05</a>
+      <div id="grid">
+        <div id="mySidepanel" class="sidepanel">
+          <section id="åbenmenu_knap">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
+              <img src="ikoner/menuluk.svg" alt="" />
+            </a>
+          </section>
+          <a href="ommig.html">Profil</a>
+          <a href="tema02.html">Tema 02</a>
+          <a href="tema03.html">Tema 03</a>
+          <a href="tema04.html">Tema 04</a>
+          <a href="tema05.html">Tema 05</a>
+        </div>
+        <section id="lukmenu_knap">
+          <button class="openbtn" onclick="openNav()">
+            <img src="ikoner/menuåben.svg" alt="menu_knap" />
+          </button>
+        </section>
+        <section id="logo">
+          <a href="index.html"><img src="SVG/overskrift1.svg" alt="" /></a>
+        </section>
+        <section id="katte">
+          <img src="ikoner/katte_overskrift.svg" alt="" />
+        </section>
+        <nav id="nav_desktop">
+          <ul>
+            <li><a href="ommig.html">Om mig</a></li>
+            <li><a href="tema02.html">Tema 02</a></li>
+            <li><a href="tema03.html">Tema 03</a></li>
+            <li><a href="tema04.html">Tema 04</a></li>
+            <li><a href="tema05.html">Tema 05</a></li>
+          </ul>
+        </nav>
       </div>
-      <button class="openbtn" onclick="openNav()">
-        <img src="ikoner/menuåben.svg" alt="menu_knap" />
-      </button>
-      <div class="logo">
-        <a href="index.html"
-          ><img src="SVG/overskrift.svg" alt="overskrift"
-        /></a>
-      </div>
-      <nav id="nav_desktop">
-        <ul>
-          <li><a href="ommig.html">Om mig</a></li>
-          <li><a href="tema02.html">Tema 02</a></li>
-          <li><a href="tema03.html">Tema 03</a></li>
-          <li><a href="tema04.html">Tema 04</a></li>
-          <li><a href="tema05.html">Tema 05</a></li>
-          <li>
-            <a href="https://www.instagram.com/anitaniknam/"
-              >Instagram<img src="ikoner/Instagram.svg" alt="Instagram"
-            /></a>
-          </li>
-        </ul>
-      </nav>
     </header>
     <main>
-      <h2>OM MIG</h2>
-      <div class="profilbillede">
-        <img src="billeder/profilbillede.JPG" alt=" profilbillede" />
-      </div>
-      <div class="ommig_beskrivelse">
-        <h3>Anita Teymouri Niknam</h3>
+      <section id="ommig_beskrivelse">
+        <h2>PROFIL</h2>
+        <section class="profilbillede">
+          <img src="billeder/profilbillede.JPG" alt="profilbillede" />
+        </section>
+        <h3>ANITA TEYMOURI NIKNAM</h3>
         <h4>MUSIKER OG MULTIMEDIEDESIGNER</h4>
         <p>
           Engageret og resultatorienteret musiker og multimediedesigner
@@ -71,48 +73,57 @@
           selv og min faglige nysgerrighed til at kunne skabe nye og bedre
           resultater.
         </p>
-      </div>
-      <div class="deltajer_beskrivelse"></div>
-      <h3>DELTAJER</h3>
-
+      </section>
+      <section id="detaljer_beskrivelse">
+        <h4>DELTAJER</h4>
+        <section class="detaljer_ikoner">
+          <section class="ikon_places">
+            <a href="https://goo.gl/maps/RBam7S5AXLCfu5k78"
+              ><img src="ikoner/Places.svg" alt=""
+            /></a>
+            <p1>Frederikssundsvej 60b, 3. Tv, København NV 2400</p1>
+          </section>
+          <section class="ikon_profile">
+            <a href="mailto:anita.niknam@gmail.com">
+              <img src="ikoner/Messages.svg" alt="" />
+            </a>
+            <p2>Email: Anita.niknam@gmail.com</p2>
+          </section>
+          <section class="ikon_phone">
+            <a href="tel:+4550530722"> <img src="ikoner/Phone.svg" alt="" /></a>
+            <p3>Tlf: 50530722</p3>
+          </section>
+          <section class="ikon_instagram">
+            <a href="https://www.instagram.com/anitaniknam/"
+              ><img src="ikoner/Instagram.svg" alt="Instagram"
+            /></a>
+            <p4>Instagram: anitaniknam</p4>
+          </section>
+          <section class="ikon_heart">
+            <a
+              href="https://open.spotify.com/playlist/1au52DiV15XvaEam1LIo1j?si=e94068f8f1654f39"
+            >
+              <img src="ikoner/Heart.svg" alt=""
+            /></a>
+            <p5>Musik, fotografering, sport, SoMe, DIY-projekter og design</p5>
+          </section>
+        </section>
+      </section>
       <footer>
-        <div id="kontakt">
-          <h3>KONTAKT</h3>
-          <ul>
-            <li>
-              Telefonnummer:
-              <span class="tlf"><a href="tel:+4550530722">50530722</a> </span>
-            </li>
-            <li>
-              Email:
-              <span class="email"
-                ><a href="mailto:anita.niknam@gmail.com"
-                  >anita.niknam@gmail.com</a
-                ></span
-              >
-            </li>
-            <li>
-              Instagram:
-              <a href="https://www.instagram.com/anitaniknam/"
-                ><img src="ikoner/Instagram.svg" alt="Instagram"
-              /></a>
-            </li>
-          </ul>
-        </div>
         <div id="ommig" onclick="window.location.href='ommig.html'">
-          <h3>OM MIG</h3>
+          <h4>PROFIL</h4>
         </div>
         <div id="tema02" onclick="window.location.href='tema02.html'">
-          <h3>TEMA 02</h3>
+          <h4>TEMA 02</h4>
         </div>
         <div id="tema03" onclick="window.location.href='tema03.html'">
-          <h3>TEMA 03</h3>
+          <h4>TEMA 03</h4>
         </div>
         <div id="tema04" onclick="window.location.href='tema04.html'">
-          <h3>TEMA 04</h3>
+          <h4>TEMA 04</h4>
         </div>
         <div id="tema05" onclick="window.location.href='tema05.html'">
-          <h3>TEMA 05</h3>
+          <h4>TEMA 05</h4>
         </div>
       </footer>
     </main>
