--- a/ommig.html
+++ b/ommig.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <div id="grid">
+      <div class="grid_menu">
         <div id="mySidepanel" class="sidepanel">
           <section id="åbenmenu_knap">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
@@ -43,16 +43,22 @@
         <section id="katte">
           <img src="ikoner/katte_overskrift.svg" alt="" />
         </section>
-        <nav id="nav_desktop">
-          <ul>
-            <li><a href="ommig.html">Om mig</a></li>
-            <li><a href="tema02.html">Tema 02</a></li>
-            <li><a href="tema03.html">Tema 03</a></li>
-            <li><a href="tema04.html">Tema 04</a></li>
-            <li><a href="tema05.html">Tema 05</a></li>
-          </ul>
-        </nav>
+        <section id="sol_container" class="">
+          <section id="sol_sprite" class=""></section>
+        </section>
+        <section id="stjerne_container">
+          <section id="stjerne_sprite"></section>
+        </section>
       </div>
+      <nav id="nav_desktop">
+        <ul class="menu">
+          <li><a href="ommig.html">Om mig</a></li>
+          <li><a href="tema02.html">Tema 02</a></li>
+          <li><a href="tema03.html">Tema 03</a></li>
+          <li><a href="tema04.html">Tema 04</a></li>
+          <li><a href="tema05.html">Tema 05</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section id="ommig_beskrivelse">
