--- a/ommig.html
+++ b/ommig.html
@@ -52,7 +52,7 @@
       </div>
       <nav id="nav_desktop">
         <ul class="menu">
-          <li><a href="ommig.html">Om mig</a></li>
+          <li><a href="ommig.html">Profil</a></li>
           <li><a href="tema02.html">Tema 02</a></li>
           <li><a href="tema03.html">Tema 03</a></li>
           <li><a href="tema04.html">Tema 04</a></li>
