--- a/ommig.html
+++ b/ommig.html
@@ -61,57 +61,65 @@
       </nav>
     </header>
     <main>
-      <section id="ommig_beskrivelse">
-        <h2>PROFIL</h2>
-        <section class="profilbillede">
-          <img src="billeder/profilbillede.JPG" alt="profilbillede" />
+      <section id="grid_profil">
+        <section class="ommig_beskrivelse">
+          <section class="profil_billede">
+            <h2>PROFIL</h2>
+            <section class="profilbillede">
+              <img src="billeder/profilbillede.JPG" alt="profilbillede" />
+            </section>
+          </section>
+          <h3>ANITA TEYMOURI NIKNAM</h3>
+          <h4>MUSIKER OG MULTIMEDIEDESIGNER</h4>
+          <p>
+            Engageret og resultatorienteret musiker og multimediedesigner
+            studerende med stærk passion for at udforske og visualisere nye
+            idéer, design-trends og grafiske udtryk ud fra de indtryk, jeg møder
+            i min hverdag. Her finder jeg glæde i at gå dybden med den kreative
+            proces og have overblik over projektets helhed – lige fra idé til
+            det færdige produkt. Med et skarpt øje for detaljer og et gåpåmod,
+            der brænder for musik, design og ledelse, sætter jeg en ære i, altid
+            at udfordre mig selv og min faglige nysgerrighed til at kunne skabe
+            nye og bedre resultater.
+          </p>
         </section>
-        <h3>ANITA TEYMOURI NIKNAM</h3>
-        <h4>MUSIKER OG MULTIMEDIEDESIGNER</h4>
-        <p>
-          Engageret og resultatorienteret musiker og multimediedesigner
-          studerende med stærk passion for at udforske og visualisere nye idéer,
-          design-trends og grafiske udtryk ud fra de indtryk, jeg møder i min
-          hverdag. Her finder jeg glæde i at gå dybden med den kreative proces
-          og have overblik over projektets helhed – lige fra idé til det færdige
-          produkt. Med et skarpt øje for detaljer og et gåpåmod, der brænder for
-          musik, design og ledelse, sætter jeg en ære i, altid at udfordre mig
-          selv og min faglige nysgerrighed til at kunne skabe nye og bedre
-          resultater.
-        </p>
-      </section>
-      <section id="detaljer_beskrivelse">
-        <h4>DELTAJER</h4>
-        <section class="detaljer_ikoner">
-          <section class="ikon_places">
-            <a href="https://goo.gl/maps/RBam7S5AXLCfu5k78"
-              ><img src="ikoner/Places.svg" alt=""
-            /></a>
-            <p1>Frederikssundsvej 60b, 3. Tv, København NV 2400</p1>
-          </section>
-          <section class="ikon_profile">
-            <a href="mailto:anita.niknam@gmail.com">
-              <img src="ikoner/Messages.svg" alt="" />
-            </a>
-            <p2>Email: Anita.niknam@gmail.com</p2>
-          </section>
-          <section class="ikon_phone">
-            <a href="tel:+4550530722"> <img src="ikoner/Phone.svg" alt="" /></a>
-            <p3>Tlf: 50530722</p3>
-          </section>
-          <section class="ikon_instagram">
-            <a href="https://www.instagram.com/anitaniknam/"
-              ><img src="ikoner/Instagram.svg" alt="Instagram"
-            /></a>
-            <p4>Instagram: anitaniknam</p4>
-          </section>
-          <section class="ikon_heart">
-            <a
-              href="https://open.spotify.com/playlist/1au52DiV15XvaEam1LIo1j?si=e94068f8f1654f39"
-            >
-              <img src="ikoner/Heart.svg" alt=""
-            /></a>
-            <p5>Musik, fotografering, sport, SoMe, DIY-projekter og design</p5>
+        <section class="detaljer_beskrivelse">
+          <h4>DELTAJER</h4>
+          <section class="detaljer_ikoner">
+            <section class="ikon_places">
+              <a href="https://goo.gl/maps/RBam7S5AXLCfu5k78"
+                ><img src="ikoner/Places.svg" alt=""
+              /></a>
+              <p1>Frederikssundsvej 60b, 3. Tv, København NV 2400</p1>
+            </section>
+            <section class="ikon_profile">
+              <a href="mailto:anita.niknam@gmail.com">
+                <img src="ikoner/Messages.svg" alt="" />
+              </a>
+              <p2>Email: Anita.niknam@gmail.com</p2>
+            </section>
+            <section class="ikon_phone">
+              <a href="tel:+4550530722">
+                <img src="ikoner/Phone.svg" alt=""
+              /></a>
+              <p3>Tlf: 50530722</p3>
+            </section>
+            <section class="ikon_instagram">
+              <a href="https://www.instagram.com/anitaniknam/"
+                ><img src="ikoner/Instagram.svg" alt="Instagram"
+              /></a>
+              <p4>Instagram: anitaniknam</p4>
+            </section>
+            <section class="ikon_heart">
+              <a
+                href="https://open.spotify.com/playlist/1au52DiV15XvaEam1LIo1j?si=e94068f8f1654f39"
+              >
+                <img src="ikoner/Heart.svg" alt=""
+              /></a>
+              <p5
+                >Musik, fotografering, sport, SoMe, DIY-projekter og design</p5
+              >
+            </section>
           </section>
         </section>
       </section>
